--- a/TestAPI.csproj
+++ b/TestAPI.csproj
@@ -4,9 +4,10 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
-    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.1.0"/>
-    <PackageReference Include="Simple.OData.Client" Version="5.8.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.1.0" />
+    <PackageReference Include="Microsoft.OData.Client" Version="7.6.0" />
+    <PackageReference Include="Simple.OData.Client" Version="5.8.0" />
   </ItemGroup>
 </Project>
